windows-exporter/servicemonitor-windows-vms.yaml
apiVersion: v1
kind: Service
metadata:
  name: bsod-windows-exporter-${VM_NAME}
  namespace: ${NAMESPACE}
  labels:
    bsod-detection/windows-exporter: "true"
    vm.kubevirt.io/name: ${VM_NAME}
spec:
  type: ClusterIP
  ports:
    - name: windows-exporter
      port: 9182
      targetPort: 9182
      protocol: TCP
  selector:
    vm.kubevirt.io/name: ${VM_NAME}
